<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtCodigo"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:textColor="#000000"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/codigo"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtTitulo"
        android:textColor="#000000"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/titulo"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtTipo"
        android:textColor="#000000"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:text="@string/tipo"
        android:background="@drawable/table_content_cell_bg"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtEstado"
        android:textColor="#000000"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/estado"
        android:textSize="15sp" />
</LinearLayout>